<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XFix Calc</string>
    <string name="action_settings">Settings</string>
    <string name="inputHint">Input Calculation</string>
    <string name="input"></string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="calculate">=</string>
    <string name="space">Space</string>
    <string name="clear">Clear</string>
    <string name="decimal">.</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="autoToggle">Auto</string>
    <string name="pre">PreFix</string>
    <string name="post">PostFix</string>
    <string name="in">InFix</string>
    <string name="tv"></string>

</resources>
