<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/inputHint"
            android:inputType="phone"
            android:digits="0123456789+*-. /()"
            android:text="@string/input" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relativeLayout1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/calculate" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/relativeLayout1"
        android:layout_toRightOf="@id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:text="@string/add" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:text="@string/divide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linearLayout1"
        android:layout_toRightOf="@id/linearLayout2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:text="@string/space" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            android:text="@string/clear" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:text="@string/decimal" />
    </LinearLayout>

</RelativeLayout>